Add progress bar indicators

--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@
                 <div class="skill-icon">
                   <i class="fa fa-code" aria-hidden="true"></i>
                 </div>
-                <div class="skill-name">Angular
-                  <div data-width="95%" style="width: 95%;" class="chart"></div>
+                <div class="skill-name">Angular</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 65%;"></div>
                 </div>
               </div>
               <div class="skill">
@@ -188,42 +189,63 @@
                   <i class="fa fa-mobile" aria-hidden="true"></i>
                 </div>
                 <div class="skill-name">React.js</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 70%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-database" aria-hidden="true"></i>
                 </div>
-                <div class="skill-name">HTML/CSS</div>
+                <div class="skill-name">Ruby on Rails</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 65%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-paint-brush" aria-hidden="true"></i>
                 </div>
-                <div class="skill-name">SQL</div>
+                <div class="skill-name">Laravel</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 75%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-cogs" aria-hidden="true"></i>
                 </div>
-                <div class="skill-name">JEST</div>
+                <div class="skill-name">Software Testing</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 60%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-cloud" aria-hidden="true"></i>
                 </div>
                 <div class="skill-name">MySQL</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 85%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-handshake-o" aria-hidden="true"></i>
                 </div>
                 <div class="skill-name">Postgres</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 70%;"></div>
+                </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
                   <i class="fa fa-mobile" aria-hidden="true"></i>
                 </div>
                 <div class="skill-name">Flutter</div>
+                <div class="progress-bar">
+                  <div class="bar-indicator" style="width: 45%;"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -322,7 +344,7 @@
                 </div>
                 <div class="contact-name">
                   Phone <br />
-                  <span>+234 813 000 0000</span>
+                  <span>+233 55 434 5993</span>
                 </div>
               </div>
               <div class="contact">
