--- a/index.html
+++ b/index.html
@@ -177,74 +177,67 @@
             <div class="further-details">
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-code" aria-hidden="true"></i>
+                  <i class="fa fa-code" aria-hidden="true"></i>Angular
                 </div>
-                <div class="skill-name">Angular</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 65%;"></div>
+                  <div class="bar-indicator" style="width: 65%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-mobile" aria-hidden="true"></i>
+                  <i class="fa fa-code" aria-hidden="true"></i>React.js
                 </div>
-                <div class="skill-name">React.js</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 70%;"></div>
+                  <div class="bar-indicator" style="width: 70%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-database" aria-hidden="true"></i>
+                  <i class="fa fa-database" aria-hidden="true"></i>Ruby on
+                  Rails
                 </div>
-                <div class="skill-name">Ruby on Rails</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 65%;"></div>
+                  <div class="bar-indicator" style="width: 65%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                  <i class="fa fa-paint-brush" aria-hidden="true"></i>Laravel
                 </div>
-                <div class="skill-name">Laravel</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 75%;"></div>
+                  <div class="bar-indicator" style="width: 75%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-cogs" aria-hidden="true"></i>
+                  <i class="fa fa-cloud" aria-hidden="true"></i>Software Testing
                 </div>
-                <div class="skill-name">Software Testing</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 60%;"></div>
+                  <div class="bar-indicator" style="width: 60%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-cloud" aria-hidden="true"></i>
+                  <i class="fa fa-cloud" aria-hidden="true"></i>MySQL
                 </div>
-                <div class="skill-name">MySQL</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 85%;"></div>
+                  <div class="bar-indicator" style="width: 75%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                  <i class="fa fa-handshake-o" aria-hidden="true"></i>Postgres
                 </div>
-                <div class="skill-name">Postgres</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 70%;"></div>
+                  <div class="bar-indicator" style="width: 75%"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill-icon">
-                  <i class="fa fa-mobile" aria-hidden="true"></i>
+                  <i class="fa fa-mobile" aria-hidden="true"></i>Flutter
                 </div>
-                <div class="skill-name">Flutter</div>
                 <div class="progress-bar">
-                  <div class="bar-indicator" style="width: 45%;"></div>
+                  <div class="bar-indicator" style="width: 45%"></div>
                 </div>
               </div>
             </div>
