Fixed wrapping component

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <i class="fa fa-database" aria-hidden="true"></i>
               </div>
               <div class="service-name">
-                Database Management
+                Database Management <br />
                 <span class="service-description"
                   >Manage data in a robust database system, for easy access and
                   scalability</span
